--- a/client/package.json
+++ b/client/package.json
@@ -4,5 +4,13 @@
   "description": "Front-end for Bugtrackr",
   "main": "index.js",
   "author": "Tai N, Mariya E",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "webpack": "^5.2.0",
+    "webpack-cli": "^4.1.0"
+  }
 }
