--- a/package.json
+++ b/package.json
@@ -18,5 +18,14 @@
   "bugs": {
     "url": "https://github.com/BugTrackr/bugtrackr/issues"
   },
-  "homepage": "https://github.com/BugTrackr/bugtrackr#readme"
+  "homepage": "https://github.com/BugTrackr/bugtrackr#readme",
+  "devDependencies": {
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.14.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.0",
+    "prettier": "^2.1.2"
+  }
 }
