--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "start": "webpack serve --hot"
   },
   "dependencies": {
+    "formik": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
