--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "tailwindcss": "^1.9.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -25,6 +26,8 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
+    "postcss": "^8.1.4",
+    "postcss-loader": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "style-loader": "^2.0.0",
     "webpack": "^5.2.0",
