--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
+    "start": "node -r dotenv/config src/server.js dotenv_config_path=./.env",
+    "dev": "nodemon -r dotenv/config src/server.js dotenv_config_path=./.env",
     "test": "jest --coverage --verbose --silent"
   },
   "author": "",
@@ -25,6 +25,7 @@
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": [
       "/node_modules/"
-    ]
+    ],
+    "setupFiles": ["<rootDir>/test.env"]
   }
 }
